--- a/src/main.css
+++ b/src/main.css
@@ -104,16 +104,16 @@
 
 @layer components {
   .text-h1 {
-    @apply text-3xl font-bold tracking-tight;
+    @apply text-2xl sm:text-3xl font-bold tracking-tight;
   }
   .text-h2 {
-    @apply text-2xl font-semibold tracking-tight;
+    @apply text-xl sm:text-2xl font-semibold tracking-tight;
   }
   .text-h3 {
-    @apply text-xl font-semibold tracking-tight;
+    @apply text-lg sm:text-xl font-semibold tracking-tight;
   }
   .text-h4 {
-    @apply text-lg font-semibold tracking-tight;
+    @apply text-base sm:text-lg font-semibold tracking-tight;
   }
 }
 
